applications/code-server/coder-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coder-db
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
      tier: database
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
        tier: database
    spec:
      containers:
      - image: postgres:14.2
        name: code-db
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
