applications/code-server/coder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: code-server
      tier: frontend
  template:
    metadata:
      labels:
        app: code-server
        tier: frontend
    spec:
      containers:
      - image: ghcr.io/coder/coder:latest
        name: code-server
        ports:
        - containerPort: 7000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
