applications/code-server/code-server.yaml
---
# Source: code-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app.kubernetes.io/name: code-server
    helm.sh/chart: code-server-3.2.2
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/instance: code-server
---
# Source: code-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app.kubernetes.io/name: code-server
    helm.sh/chart: code-server-3.2.2
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: code-server
      app.kubernetes.io/instance: code-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: code-server
        app.kubernetes.io/instance: code-server
    spec:
      imagePullSecrets:
        []
      securityContext:
        fsGroup: 1000
      containers:
        - name: code-server
          image: "codercom/code-server:4.7.0"
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
          volumeMounts:
          - name: data
            mountPath: /home/coder
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
      serviceAccountName: code-server
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: code-server
---
# Source: code-server/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "code-server-test-connection"
  labels:
    app.kubernetes.io/name: code-server
    helm.sh/chart: code-server-3.2.2
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['code-server:8080']
  restartPolicy: Never
