applications/code-server/coder-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder-db-svc
  namespace: code-server
spec:
  selector:
    app: code-server
    tier: database
  ports:
  - protocol: TCP
    port: 5432
