applications/code-server/coder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  ports:
  - port: 7000
    targetPort: 80
  selector:
    app: code-server
