applications/code-server/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coder-db
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: postgres
      tier: database
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        tier: database
    spec:
      containers:
      - image: postgres:14.2
        name: code-db
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: coder-db
  namespace: code-server
spec:
  selector:
    app: postgres
    tier: database
  type: NodePort # Sets the service type
  ports:
    - port: 5432 # Sets the port to run the postgres applicatio
