applications/code-server/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: code-server-ingress
  namespace: code-server
spec:
  entryPoints:
    - web           
  routes:           # v-- adding a host rule
    - match: Host(`pibox.local`) && Path(`/code`)
      kind: Rule
      priority: 7 # <-- makes this take precedence over argo
      middlewares:
      - name: stripprefix
        namespace: default
      services:
        - name: code-server
          namespace: code-server
          port: 7000
